JWT 3.18.1
-add other but similary to create and validate jwt 3.18.1
